product list tab view update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.tomcat.max-active=50
 
 # Validate the connection before borrowing it from the pool.
 spring.datasource.tomcat.test-on-borrow=true
+
+# Max file size.
+spring.servlet.multipart.max-file-size=10MB
+# Max request size.
+spring.servlet.multipart.max-request-size=10MB
