--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>9.4-1206-jdbc42</version>
         </dependency>
         <dependency>
+            <groupId>com.github.esempla</groupId>
+            <artifactId>spring-boot-starter-embedded-postgres</artifactId>
+            <version>v0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -77,6 +82,13 @@
             <version>3.0.4.RELEASE</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
