reload template with no build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.datasource.tomcat.test-on-borrow=true
 spring.servlet.multipart.max-file-size=10MB
 # Max request size.
 spring.servlet.multipart.max-request-size=10MB
+
+
+spring.thymeleaf.cache=false
+
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.resources.static-locations= file:src/main/resources/static/
